--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -8,11 +8,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v5
+     - name: checkout code
+       uses: actions/checkout@v4
+     - name: Set up Python 3.11
+       uses: actions/setup-python@v5
       with:
         python-version: 3.11
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+     - name: Install dependencies
+       run: |
+         pip install -r requirements.txt
